--- a/src/css/productFlags.css
+++ b/src/css/productFlags.css
@@ -2,9 +2,10 @@
 .labeled-product,
 .selected-product-cards,
 .flagged-bought-together {
-  padding: 10px;
-  border-radius: 5px !important;
-  box-shadow: var(--flagged-item-box-shadow, 0px 0px 5px 2px) !important;
+  padding: 5px;
+  border-radius: 10px !important;
+  border: 1px solid var(--flagged-item-brgb(255, 0, 0), #dd0f0f) !important;
+  box-shadow: var(--flagged-item-box-shadow, 1px 1px 1px 1px) !important;
 }
 
 .flagged-product-image {
