--- a/src/css/universalToggle.css
+++ b/src/css/universalToggle.css
@@ -40,6 +40,10 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2) !important;
 }
 
+.dark-mode .universal-toggle-button {
+  border-color: #ffffff !important;
+}
+
 .universal-toggle-button:hover {
   transform: scale(1.1) !important;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3) !important;
@@ -66,13 +70,13 @@
   left: -10px !important;
   right: -10px !important;
   bottom: -10px !important;
-  background-color: rgba(0, 0, 0, 0.15) !important;
-  border-radius: 25px !important;
+  background-color: rgba(0, 0, 0, 0.4) !important;
+  border-radius: 10px 25px 25px 10px !important;
   z-index: -1 !important;
 }
 
 .dark-mode .menu-open .toggle-buttons-container::before {
-  background-color: rgba(255, 255, 255, 0.05) !important;
+  background-color: rgba(255, 255, 255, 0.4) !important;
 }
 
 .toggle-option-button {
@@ -136,7 +140,7 @@
 }
 
 .toggle-option-button.active {
-  background: #e74c3c !important;
+  background: linear-gradient(145deg, #e66300, #d95500) !important;
 }
 
 /* Dark mode button styling */
@@ -162,7 +166,6 @@
 
 /* Dark mode adjustments */
 .dark-mode .toggle-option-button {
-  border-color: #ffffff !important;
   background: #4d4d4d !important; /* Lighter in dark mode */
 }
 
@@ -201,7 +204,7 @@
 .video-toggle-option.active,
 .dark-mode .ad-toggle-option.active,
 .ad-toggle-option.active {
-  background: #e74c3c !important;
+  background: linear-gradient(145deg, #e66300, #d95500) !important;
 }
 .price-difference-option {
   position: relative !important;
@@ -215,7 +218,7 @@
   right: 5px !important;
   bottom: 5px !important;
   font-size: 8px !important;
-  background-color: #e74c3c !important;
+  background-color: linear-gradient(145deg, #e66300, #d95500) !important;
   color: white !important;
   padding: 2px 4px !important;
   border-radius: 4px !important;
@@ -237,7 +240,7 @@
   padding: 4px !important;
   border: 2px solid #000000 !important;
   border-radius: 8px !important;
-  background-color: #e74c3c !important;
+  background-color: linear-gradient(145deg, #e66300, #d95500) !important;
   color: white !important;
   cursor: pointer !important;
   transition: background-color 0.2s ease !important;
@@ -264,7 +267,7 @@
   transform: translateX(-50%) !important;
   width: 150px !important;
   padding: 10px !important;
-  background-color: #e74c3c !important;
+  background-color: linear-gradient(145deg, #e66300, #d95500) !important;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2) !important;
   border-radius: 8px !important;
   z-index: 10001 !important;
